Fixes the scrollbar gutter issue for DaisyUI https://github.com/saadeghi/daisyui/issues/3040#issuecomment-2250530354

--- a/apps/readest-app/src/styles/globals.css
+++ b/apps/readest-app/src/styles/globals.css
@@ -10,6 +10,17 @@
   overscroll-behavior: none;
 }
 
+:root:has(
+    :is(
+        .modal-open,
+        .modal:target,
+        .modal-toggle:checked + .modal,
+        .modal[open]
+      )
+  ) {
+  scrollbar-gutter: unset !important;
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #222222;
